--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,5 +1,12 @@
+html {
+  box-sizing: border-box;
+}
+
+*, *:before, *:after {
+  box-sizing: inherit;
+}
+
 body {
-	margin: 0;
-	padding: 0;
+	padding: 10px 0;
 	font-family: 'Roboto', sans-serif;
 }
